crates/compiler/cypress/tests/snapshots/test_parse__value_def_confusion_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "a:F\nF\n:h\nabc\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            Ident=>LowerIdent@0
            InlineTypeColon=>OpColon@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@3
            InlineTypeColon=>OpColon@4
            Ident=>LowerIdent@5
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@6
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(Ident("a"), Name("F"))
TypeAlias(UpperIdent("F"), Name("h"))
Ident("abc")

[=== formatted below ===]

