crates/compiler/cypress/tests/snapshots/test_parse__var_else_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "elsewhere\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("elsewhere")

[=== formatted below ===]
elsewhere
