crates/compiler/cypress/tests/snapshots/test_parse__var_if_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "iffy\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr Ident=>LowerIdent@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Ident("iffy")

[=== formatted below ===]

